--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -71,7 +71,7 @@ h4 {
 }
 
 .mainArea{
-  padding:125px 5px 20px 5px;
+  padding:8.4em 5px 20px 5px;
   background-color:@color4;
   box-shadow: inset 0 0 1px 1px @shadow;
   min-height:600px;
@@ -609,8 +609,6 @@ form #user-login-form{
   }
   &.Genealogy{
     background:url('/sites/all/themes/lapcat/images/genealogyHeader.jpg');
-    background-size:100% 150%;
-    background-position-y:32%;
   }
   &.Help{
     background:url('/sites/all/themes/lapcat/images/helpHeader.jpg');
@@ -622,15 +620,12 @@ form #user-login-form{
   }
   &.Request{
     background:url('/sites/all/themes/lapcat/images/requestHeader.jpg');
-    background-size:100% 120%;
   }
   &.Research{
     background:url('/sites/all/themes/lapcat/images/searchHeader.jpg');
-    background-size: 100% 100%;
   }
   &.Teens{
     background:url('/sites/all/themes/lapcat/images/teenHeader.jpg') white;
-    background-size:100% 100%;
   }
   /*Sub page headers End*/
 }
